# ogl_sandbox

./: .gitignore  .gitmodules  README.md
cmake/: CMakeLists.txt  start.sh
src/: GLInit.cpp  GLInit.hpp  GLIo.cpp  GLScene.cpp  GLScene.hpp  GLShaders.cpp  GLShaders.hpp  GLTypedefs.hpp  fs.glsl  main.cpp
vs/: ogl.sln  ogl.vcxproj  ogl.vcxproj.filters
